--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Curriculo Jean2</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="curriculojean2.css">
+    <link rel="stylesheet" href="portfolio.css">
 </head>
     <body>
         <nav class="navbar is-4" role="navigation" aria-label="main navigation">
